--- a/css/main_style.css
+++ b/css/main_style.css
@@ -16,6 +16,7 @@ li.nav a.nav {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 18px;
 }
 li.nav a.nav:hover {
     background-color: rgb(211, 92, 92);
@@ -55,6 +56,21 @@ p.maintext {
 }
 
 .contacttext {
+    margin-left: 20px;
     margin-top: 100px;
-    padding: 30px 16px;
+    padding: 20px 16px;
+}
+
+.contactbutton {
+    background-color: rgb(211, 92, 92);
+    margin-left: 150px;
+    padding: 12px;
+    width:130px;
+    font-size:18px;
+    font-family: Comfortaa;
+    color:white;
+    border:0px;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px 1px rgba(0,0,0,0.25);
 }
