--- a/css/main_style.css
+++ b/css/main_style.css
@@ -289,3 +289,33 @@ textarea {
   margin-top: 50px;
   text-align: center;
 }
+
+/* Get Involved Styling */
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  gap: 10px;
+  background-color: white;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1 {
+  grid-column: 1 / 7;
+}
+.item2 {
+  grid-column: 2 / 3;
+}
+
+.involved_headers{
+  color: rgb(211, 92, 92);
+}
+.involved_paragraph{
+  font-size: x-large;
+}
