--- a/css/main_style.css
+++ b/css/main_style.css
@@ -185,6 +185,22 @@ p.maintext {
     padding-bottom: 10px;
     object-fit: cover;
   }
+  #board_email {
+    width: 27px;
+    height: 22px;
+    padding-bottom: 3px;
+  }
+  #board_email:hover {
+    content: url('/images/miscellaneous/email_red.png');
+  }
+  #board_title_box{
+    display: inline;
+  }
+  #board_title{
+    display: inline; 
+    padding: 0px; 
+    color: rgb(209, 76, 76);
+  }
 
   /*modal*/
 
