--- a/css/main_style.css
+++ b/css/main_style.css
@@ -378,3 +378,12 @@ img.innerbox {
 a {
   text-decoration: none;
 }
+
+.aboutusimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 500px; 
+  object-fit: contain;
+}
