--- a/css/main_style.css
+++ b/css/main_style.css
@@ -184,6 +184,7 @@ p.maintext {
     height: 150px;
     padding-bottom: 10px;
     object-fit: cover;
+    object-position: center top;
   }
   #board_email {
     width: 27px;
